test/invalid/baseline/async-sequence-const.txt
Syntax error at line 3 in async-sequence-const.webidl, since `interface AsyncSequence`:
  const async_sequence<long, short
        ^ Const lacks a type
